--- a/index.scss
+++ b/index.scss
@@ -21,6 +21,9 @@ $input-bg: red;
     background-color: white;
   }
 }
+
+//Title section
+
 .title {
   color: white;
   background-image: url(./img/title.svg);
@@ -77,6 +80,8 @@ $input-bg: red;
   margin: 36px 0 360px;
 }
 
+//Bills
+
 .bills {
   .row {
     display: flex;
@@ -102,15 +107,54 @@ $input-bg: red;
     font-weight: 700;
     padding: 5px 0;
   }
+  .bill__abovetext {
+    color: $blue-dark;
+    margin-bottom: 4px;
+  }
+  .bill__title {
+    font-weight: 700;
+    color: $blue-dark;
+    margin-bottom: 24px;
+  }
   .content {
     width: 90%;
     margin: 0 auto;
   }
-  .bill__enroll {
-    padding: 10px 16px;
-    border: none;
-    border-radius: 5px;
-    color: white;
+  .options {
+    padding-bottom: 24px;
+    border-bottom: 1px solid rgba(221, 222, 224, 1);
+    margin-bottom: 24px;
+  }
+  .options__title {
+    font-weight: 700;
+    color: $blue-dark;
+    font-size: 18px;
+    margin-bottom: 16px;
+  }
+  .options__checkbox {
+    margin-bottom: 30px;
+    width: fit-content;
+    color: $blue-dark;
+  }
+
+  .form-check {
+    label,
+    input {
+      color: rgba(114, 116, 119, 1);
+    }
+    &:has(input:checked) {
+      label {
+        color: $blue-dark;
+      }
+    }
+  }
+  .option__large {
+    font-size: 32px;
+    font-weight: 700;
+  }
+  .option__med {
+    font-size: 18px;
+    font-weight: 700;
   }
 
   .bill__details {
@@ -140,13 +184,30 @@ $input-bg: red;
     background-color: $blue-dark;
   }
 }
+.bill__enroll {
+  padding: 10px 36px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+}
+
+//Table section
 
 .table {
   width: 80% !important;
   margin: 0 auto;
   thead th {
     text-align: center;
-
+    padding: 0 0 27px 0 !important;
+    .marker {
+      width: 100%;
+      height: 10px;
+      background-color: $blue-dark;
+    }
+    .marker__basic {
+      background-color: $blue-light;
+    }
   }
   td {
     text-align: center;
@@ -155,6 +216,23 @@ $input-bg: red;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+  }
+  .details__column-title {
+    margin-top: 32px;
+  }
+  .details__abovetext {
+    font-weight: 400;
+    color: rgba(114, 116, 119, 1);
+  }
+  .bill__enroll-basic {background-color: $blue-light;}
+  .bill__enroll-pro {
+    background-color: $blue-dark;
+  }
+  
+  h6 {
+    color: $blue-dark;
+    font-weight: 700;
+    font-size: 18px;
   }
 }
 th,
@@ -166,17 +244,8 @@ td {
   }
 }
 
-.form-check {
-  label,
-  input {
-    color: rgba(114, 116, 119, 1);
-  }
-  &:has(input:checked) {
-    label {
-      color: $blue-dark;
-    }
-  }
-}
+//FAQ
+
 .faq {
   width: 100% !important;
   background-color: white;
@@ -196,6 +265,9 @@ td {
     padding-bottom: 10px;
   }
 }
+
+
+//Gallery
 
 .gallery {
   width: 100% !important;
@@ -222,7 +294,7 @@ td {
       gap: 30px;
       margin-bottom: 15px;
       .card__name {
-        & *{
+        & * {
           margin: 0;
         }
       }
